fix IE7 superfish z-index issue

--- a/ie.css
+++ b/ie.css
@@ -16,7 +16,7 @@ td.menu-disabled { filter: alpha(opacity=50); }
 .with-logo #primary-inner   { margin: 6px 0 0 0; }
 .with-logo #superfish-inner { margin: 0; }
 #primary ul.links li a,
-#superfish { position: relative; z-index: 2;}
+#superfish { position: relative; z-index: 10;}
 #primary,
 #superfish {
   _width: 100%;
