--- a/layout.css
+++ b/layout.css
@@ -54,8 +54,8 @@ ul.images li h3 {
 /*                             Skip to                               */
 /*-------------------------------------------------------------------*/
 #skip-to-content {
-  height: 30px;
-  margin: -30px 0 0 0 !important;
+  height: 0; 
+		overflow: hidden;
   font-size: 0.8em;
 }
 /*-------------------------------------------------------------------*/
